--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "html-webpack-plugin": "^4.5.1",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "style-loader": "^2.0.0",
     "stylelint": "^13.8.0",
@@ -70,5 +71,11 @@
   "dependencies": {
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
-  }
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(css|less)$": "identity-obj-proxy"
+    }
+  },
+  "version": "0.0.2"
 }
