--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "preversion": "npm run lint && npm test",
     "postversion": "git push && git push --tags",
     "test:watch": "jest --watchAll",
+    "test:coverage": "jest --coverage",
     "test": "jest"
   },
   "peerDependencies": {
