--- a/package.json
+++ b/package.json
@@ -57,9 +57,12 @@
     "html-webpack-plugin": "^4.5.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
+    "jest-axe": "^4.1.0",
     "jest-circus": "^26.6.3",
+    "jest-styled-components": "^7.0.3",
     "jest-watch-typeahead": "^0.6.1",
     "react-app-polyfill": "^2.0.0",
+    "regenerator-runtime": "^0.13.7",
     "style-loader": "^2.0.0",
     "stylelint": "^13.8.0",
     "stylelint-config-standard": "^20.0.0",
@@ -75,8 +78,11 @@
     "packageManager": "npm"
   },
   "dependencies": {
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-style-proptype": "^3.2.2",
+    "styled-components": "^5.2.1"
   },
   "jest": {
     "roots": [
