--- a/package.json
+++ b/package.json
@@ -55,12 +55,14 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-testing-library": "^3.10.1",
     "html-webpack-plugin": "^4.5.1",
+    "husky": "^4.3.8",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "jest-axe": "^4.1.0",
     "jest-circus": "^26.6.3",
     "jest-styled-components": "^7.0.3",
     "jest-watch-typeahead": "^0.6.1",
+    "lint-staged": "^10.5.3",
     "react-app-polyfill": "^2.0.0",
     "regenerator-runtime": "^0.13.7",
     "style-loader": "^2.0.0",
@@ -126,5 +128,15 @@
       "jest-watch-typeahead/testname"
     ],
     "resetMocks": true
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,jsx}": "eslint --cache",
+    "./src/**/*.{css,scss}": "stylelint",
+    "./src/**/*.styles.{js,jsx}": "stylelint"
   }
 }
