Updated prepublishOnly npm script

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "scripts": {
     "start": "webpack serve --mode development",
-    "prepublishOnly": "rm -rdf build && babel src -d build --ignore src/setupTest.js",
+    "prepublishOnly": "rm -rdf build && babel src -d build --ignore './src/setupTest.js' --ignore './src/**/*.test.js' --ignore './src/**/*.test.jsx'",
     "lint:js": "eslint ./src --ext .js,.jsx --fix",
     "lint:css": "stylelint './src/**/*.styles.{js,jsx}' './src/**/*.{css,scss}' './examples/src/**/*.css' --fix --allow-empty-input",
     "lint": "npm run lint:js && npm run lint:css",
