--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
   },
   "peerDependencies": {
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.10",
@@ -75,10 +76,7 @@
   },
   "dependencies": {
     "prop-types": "^15.7.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-style-proptype": "^3.2.2",
-    "styled-components": "^5.2.1"
+    "react-style-proptype": "^3.2.2"
   },
   "jest": {
     "roots": [
