--- a/.babelrc
+++ b/.babelrc
@@ -2,5 +2,16 @@
   "presets":[
     "@babel/preset-env",
     "@babel/preset-react"
+  ],
+  "plugins": [
+    [
+      "transform-react-remove-prop-types",
+      {
+        "removeImport": true,
+        "additionalLibraries": [
+          "react-style-proptype"
+        ]
+      }
+    ]
   ]
 }
