--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^24.1.3",
+    "eslint-plugin-jsdoc": "^31.0.6",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
@@ -79,7 +80,10 @@
   },
   "dependencies": {
     "prop-types": "^15.7.2",
-    "react-style-proptype": "^3.2.2"
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-style-proptype": "^3.2.2",
+    "styled-components": "^5.2.1"
   },
   "jest": {
     "roots": [
