--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,6 +25,8 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
+    - name: NPM or Yarn install with caching
+      uses: bahmutov/npm-install@v1.6.0
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
