--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,7 +26,11 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - name: NPM or Yarn install with caching
-      uses: bahmutov/npm-install@v1.6.0
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
+      with:
+        install-command: yarn --frozen-lockfile --silent
+    - name: Lint
+      run: yarn lint
+    - name: Test
+      run: yarn test --ci --coverage --maxWorkers=2
+    - name: Build
+      run: yarn build
