--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,6 +26,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - name: NPM or Yarn install with caching
+    - uses: bahmutov/npm-install@v1
       with:
         install-command: yarn --frozen-lockfile --silent
     - name: Lint
