--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -32,4 +32,4 @@ jobs:
     - name: Test
       run: yarn test --ci --coverage --maxWorkers=2
     - name: Build
-      run: yarn build
+      run: yarn prepublishOnly
